web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__tuple__tuple-functions__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from invoices\nderive {\n  cleared = tuple_reduce std.and {\n    received, processed, packed, shipped\n  }\n}\n"
---
SELECT
  *,
  received
  AND processed
  AND packed
  AND shipped AS cleared
FROM
  invoices
