web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__tuple__tuple-functions__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from test\nderive {\n  mysum = tuple_reduce initial:0 add {1, 2, 3}\n}\n"
---
SELECT
  *,
  0 + 1 + 2 + 3 AS mysum
FROM
  test
