web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__tuple__tuple-functions__4.snap
---
source: web/book/tests/documentation/book.rs
expression: "let shipments = (from shipments | select {id, invoice_id, date_of, shipped_on})\n\nfrom invoices\nselect {id, date_of, processed}\njoin shipments (this.id == that.invoice_id)\n"
---
WITH
table_0 AS (
  SELECT
    id,
    invoice_id,
    date_of,
    shipped_on
  FROM
    shipments
)
SELECT
  invoices.id,
  invoices.date_of,
  invoices.processed,
  shipments.id,
  shipments.invoice_id,
  shipments.shipped_on
FROM
  invoices
  INNER JOIN table_0 AS shipments ON invoices.id = shipments.invoice_id
