web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__tuple__tuple-functions__7.snap
---
source: web/book/tests/documentation/book.rs
expression: "from test\nselect (tuple_uniq {x, 5, y})\n"
---
SELECT
  x,
  y
FROM
  test
