web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__tuple__tuple-functions__8.snap
---
source: web/book/tests/documentation/book.rs
expression: "from test\nselect (tuple_reverse {x, y, z})\n"
---
SELECT
  z,
  y,
  x
FROM
  test
